# rust-game-engine

./: Cargo.toml  README.md  mkdocs.yml
docs/: about.md  index.md
src/: main.rs
src/graphics_pipeline/: mod.rs
src/shaders/: frag.glsl  vert.glsl
