[package]
name = "rust-game-engine"
version = "0.1.0"
authors = ["sallaben <steven.allaben@gmail.com>", "paranoidandroid81 <mpk44@pitt.edu>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = "0.2.1"
rendy = "0.3.1"
winit = "0.20.0-alpha1"
log = "0.4.6"
simple_logger = "1.3.0"
arrayvec = "0.4.10"

[dependencies.gfx-backend-vulkan]
version = "0.2.3"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.2.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.1"
optional = true

