[package]
name = "rust-game-engine"
version = "0.1.0"
authors = ["sallaben <steven.allaben@gmail.com>", "paranoidandroid81 <mpk44@pitt.edu>"]
edition = "2018"

[dependencies]
rendy = "0.4.0"
rendy-shader = "0.4.0"
log = "0.4.6"
arrayvec = "0.4.10"
gfx-hal = "0.3.1"
lazy_static = "1.3.0"
failure = "0.1.5"
env_logger = "0.6.2"
shaderc = "0.5.1"

[patch.crates-io]
shaderc = { git = "https://github.com/sallaben/shaderc-rs" }

[features]
default = []
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]
vulkan = ["gfx-backend-vulkan", "rendy/vulkan"] 
gl = ["gfx-backend-gl", "gfx-backend-gl/winit"]
spirv-reflection = ["rendy-shader/spirv-reflection"]

[dependencies.gfx-backend-vulkan]
version = "0.3"
features= ["winit","x11"]
optional = true

[dependencies.gfx-backend-gl]
version = "0.3"
optional = true